# kajol

./: .gitignore  LICENSE.txt  README.md  kajol-1.0.1-cp314-cp314-win_amd64.whl  kajol-1.0.2-cp314-cp314-win_amd64.whl  kajol.config.py  kajol.lock.pkl  pyproject.toml
kajol/: __main__.py  build.py  config.py  do_build.py  install.py  mkvenv.py
test/: README.md  kajol.config.py  kajol.lock.pkl  test-0.0.0-cp314-cp314-win_amd64.whl
test/test/: keywdarg.c  keywdarg.cp314-win_amd64.pyd
